src/objects/Stakeholder__c.object
<CustomObject>
    <description>Contains the list of other project stakeholders</description>
    <fields>
        <fullName>AECOMContact__c</fullName>
        <label>AECOM Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ChangeManagerIsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StakeholderType__c</fullName>
        <label>Stakeholder Type</label>
        <picklist>
            <picklistValues>
                <fullName>External Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaming Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>Stakeholder-{00000}</displayFormat>
        <label>Stakeholder Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>